# ArcadiaCoreEngine

./: CMakeLists.txt  library.h
Engine/: CMakeLists.txt
Engine/Config/: Engine.ini
Engine/Source/ArcadiaCore/AModule/: CMakeLists.txt
Engine/Source/ArcadiaCore/AModule/Private/: INIParser.cpp  JSONParser.cpp  ModuleManager.cpp
Engine/Source/ArcadiaCore/AModule/Public/: INIParser.h  JSONParser.h  ModuleManager.h
Engine/Source/ArcadiaCore/AModule/build-db/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Engine/Source/ArcadiaCore/AModule/build-db/.cmake/api/v1/reply/: cache-v2-758dbaa86f15f93e6454.json  cmakeFiles-v1-1935d06af0c73095d2e4.json  codemodel-v2-2d5a78809da96b5fc7bf.json  index-2024-08-12T01-33-57-0858.json  target-AModule-Debug-8bba3badad110c50d8ba.json
Engine/Source/ArcadiaCore/AModule/build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Engine/Source/ArcadiaCore/AModule/build-debug/.cmake/api/v1/reply/: cache-v2-a58778428cf133c154c4.json  cmakeFiles-v1-b06b28ce026ff712f47c.json  codemodel-v2-24509f45f2b6db5a9a38.json  index-2024-08-10T13-46-40-0656.json  target-AModule-Debug-8b9e4fb7c081bab228d4.json
Engine/Source/ArcadiaCore/Modules/ACEInput/: ACEInput.amodule  CMakeLists.txt
Engine/Source/ArcadiaCore/Modules/ACEInput/Private/: InputHandler.cpp
Engine/Source/ArcadiaCore/Modules/ACEInput/Public/: InputHandler.h
Engine/Source/ArcadiaCore/Modules/ACELogger/: ACELogger.amodule  CMakeLists.txt
Engine/Source/ArcadiaCore/Modules/ACELogger/Private/: ACELogger.cpp
Engine/Source/ArcadiaCore/Modules/ACELogger/Public/: ACELogger.h  LogLevel.h
Engine/Source/ArcadiaCore/Modules/ACEMemoryManager/: ACEMemoryManager.amodule  CMakeLists.txt  FACEFreeListAllocator.Build.cs  FACEPoolAllocator.Build.cs  FACEStackAllocator.Build.cs  FaceAllocator.Build.cs
Engine/Source/ArcadiaCore/Modules/ACEMemoryManager/Private/: FACEAllocator.cpp  FACEFreeListAllocator.cpp  FACEPoolAllocator.cpp  FACEStackAllocator.cpp
Engine/Source/ArcadiaCore/Modules/ACEMemoryManager/Public/: FACEFreeListAllocator.h  FACEStackAllocator.h
Engine/Source/ArcadiaCore/Modules/ACEMemoryManager/include/: FACEAllocator.h  FACEPoolAllocator.h
Engine/Source/ArcadiaCore/Modules/BuildTool/: CMakeLists.txt  main.cpp
Engine/Source/ArcadiaCore/Modules/BuildTool/Private/: BuildFileParser.cpp  BuildTool.cpp
Engine/Source/ArcadiaCore/Modules/BuildTool/Public/: BuildFileParser.h  BuildTool.h
Engine/Source/ArcadiaCore/Modules/BuildTool/build-db/: CMakeCache.txt
Engine/Source/ArcadiaCore/Modules/BuildTool/build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Engine/Source/ArcadiaCore/Modules/BuildTool/build-debug/.cmake/api/v1/reply/: cache-v2-3c09166ead41ba416969.json  cmakeFiles-v1-754cdad24671f549000a.json  cmakeFiles-v1-ed795c49c48b1095debe.json  codemodel-v2-10d24a224288b24c101d.json  index-2024-08-27T12-55-25-0119.json  index-2024-08-27T13-11-47-0935.json  target-BuildTool-Debug-a5b610c27381b87bbc86.json
Engine/Source/ArcadiaCore/Modules/Launch/: CMakeLists.txt
Engine/Source/ArcadiaCore/Modules/Launch/Private/: CommandLine.cpp  Launch.cpp
Engine/Source/ArcadiaCore/Modules/Launch/Public/: CommandLine.h  Launch.h
Engine/Source/ArcadiaCore/Private/: Core.cpp  EngineConfig.cpp  UACEEngine.cpp  UACERenderer.cpp
Engine/Source/ArcadiaCore/Public/: Core.h  EngineConfig.h  Types.h  UACEEngine.h  UACERenderer.h
Engine/Source/ArcadiaCore/Public/Logging/: Logging.h
Engine/Source/ArcadiaCore/Public/Math/: Math.h  Matrix.h  Vector.h
Engine/Source/ArcadiaCore/Public/Memory/: Memory.h
Engine/Source/ArcadiaCore/Public/Platform/: Build.h  CoreTypes.h  Platform.h
Engine/Source/ArcadiaCore/Public/Platform/Windows/: WindowsPlatform.h
Game/: CMakeLists.txt
Game/Source/GameProject/Private/: main.cpp
TestApp/: CMakeLists.txt  main.cpp
TestApp/build-debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
TestApp/build-debug/.cmake/api/v1/reply/: cache-v2-3d93d9a4576a76e483b9.json  cmakeFiles-v1-93c971961480d0cd446b.json  codemodel-v2-1273e48f6d5126d0a695.json  index-2024-08-10T13-31-54-0659.json  target-TestApp-Debug-18baf57597b5ac1fc7f2.json
build-db/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-db/.cmake/api/v1/reply/: cache-v2-2439321fe4df223766a5.json  cache-v2-33ced099347532639981.json  cmakeFiles-v1-804f5612e749156311d3.json  cmakeFiles-v1-af5a54e03afaa484f01c.json  codemodel-v2-229ef9f21d8575cd15a3.json  codemodel-v2-4557fff16f31ffdaf65c.json  codemodel-v2-7d25d67bf9b6e0acb5f4.json  codemodel-v2-b1d853e4b5738abf1696.json  directory-Engine.Source.ArcadiaCore.Modules.ACEInput-Debug-d9eb1c139929d68308ee.json  index-2024-08-12T02-47-32-0462.json  index-2024-08-12T11-46-16-0538.json  index-2024-08-15T15-03-13-0802.json  index-2024-08-16T22-51-55-0394.json  target-ACE-Debug-5a44a08ac11dfd27c598.json  target-ACE-Debug-f84719f614783b67111f.json  target-ACEEngine-Debug-96b9ce20f72c4e87a9fd.json  target-ACEEngine-Debug-a9376fe6b396a6b9eeda.json  target-ACELogger-Debug-e857bcc4fc328414d9c6.json  target-AModule-Debug-659779c761af621c15f0.json  target-BuildTool-Debug-2a4c646807bd9e21a689.json
build-db/Game/: game_log.txt
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-debug/.cmake/api/v1/reply/: cache-v2-190fb38f5d62074c9c2f.json  cache-v2-19c4a5004c6be5535afc.json  cache-v2-e0af98d2868233c8bd36.json  cmakeFiles-v1-081d4a9ec58e04a5e9a2.json  cmakeFiles-v1-33db178e78856df6c1f3.json  cmakeFiles-v1-6f57b328c676aa977545.json  cmakeFiles-v1-9aff3cf9058c775fae89.json  codemodel-v2-55bce3d6fbb60e08c0d4.json  codemodel-v2-8001cd152a89deffeef2.json  codemodel-v2-e88017597796942ae7fb.json  directory-Engine.Source.ArcadiaCore.AModule-Debug-c9a8ad1ed44afd00b000.json  directory-Engine.Source.ArcadiaCore.Modules.ACELogger-Debug-f5ab03494927b619e6f2.json  index-2024-08-09T16-15-52-0719.json  index-2024-08-10T13-23-20-0288.json  (+16 more)
build-debug/Engine/: cmake_install.cmake
build-debug/Game/: cmake_install.cmake
(+5 files in other folders)
